personal.css
#header {
  width: 100%;
  height: 60px;
  padding-top: 15px;
  background-color: #989898;
  position: fixed;
  z-index: 3;
}
#body {
  margin: 0;
}
#footer1 {
  height: 80px;
  background-color: #C0C0C0;
  padding-top: 15px;
  clear: both;
}
#footer2 {
  height: 60px;
  background-color: #989898;
  clear: both;
}
.nav {
  display: table;
  width: 450px;
  margin: 0 auto;
  }

.featurepic {
  height: 700px;
  position: relative;
	clear: both;
	overflow: hidden;
}

.featurepic img {
  height: 100%;
  width: 100%;
  position: relative;
  z-index: 1;
}

.featurepic .name {
  display: block;
  position: absolute;
  width: 100%;
  top: 30%;
  left: 0;
  z-index: 2;
  text-align: center;
  font-family: "Hind";
  font-size: 120px;
  font-style: oblique;
  color: white;
  letter-spacing: 4px;
  opacity: 0.8;
  text-transform: uppercase;
}

.section1 {
  margin: 0 auto;
  width: 100%;
  background-color: #F0F0F0;
  }

.section2 {
  margin: 0 auto;
  width: 100%;
}

.section3 {
  margin: 0 auto;
  width: 100%;
  background-color: #484848;
  clear: both;
}
.introtext {
  width: 580px;
  margin: 0 auto;
  padding-bottom: 40px;
}
.littlerecstext {
  width: 580px;
  margin: 0 auto;
  padding-bottom: 40px;
  font-size: 20px;
}

.littlerecstext img {
  width: 100%;
}

.main {
  background-color: #F0F0F0;
}

.row {
  width: 100%;
  background-color: #C8C8C8;
}
.row2 {
  width: 100%;
  background-color: #E0E0E0;
}
.col-1-3 {
  width: 30%;
  float: left;
  margin: 1.66%;
}
.col-1-4 {
  width: 25%;
  height: 300px;
  float: left;
  background-color: #F0F0F0;
}
.col-1-2 {
  width: 50%;
  height: 300px;
  float: left;
  background-color: #F0F0F0;
}
.col-1-2-foot {
  width: 46%;
  height: 80px;
  float: left;
  background-color: #C0C0C0;
}
.footerlogos {
  display: table;
  width: 250px;
  margin: 0 auto;
}
.footerlogos a:hover {
  text-decoration: none;
}
.footersvg {
  fill: #000000;
}
.footersvg:hover {
  fill: aquamarine;
}
.footermail {
  display: table;
  width: 250px;
  margin: 0 auto;
  padding-top: 22px;
}
ul li {
  display: inline;
  float: left;
  position: relative;
  padding-right: 30px;
  font-family: "Exo 2" sans-serif;
  color: white;
  text-transform: uppercase;
  text-transform: full-width;
  letter-spacing: 1px;
}
h1 {
  font-family: "Rock Salt" sans-serif;
  font-size: 28px;
  text-align: center;
  letter-spacing: 2px;
  margin: 0px;
  padding: 60px 0px 20px 0px;
}
h2 {
  font-family: "Lato" sans-serif;
  text-size: 22px;
  text-transform: uppercase;
  text-align: center;
}
h3 {
  font-family: "Rock Salt" sans-serif;
  font-size: 28px;
  text-align: center;
  letter-spacing: 5px;
  color: white;
  margin: 0px;
  padding: 60px 0px 20px 0px;
}
p {
  font-family: "Lato" sans-serif;
  text-size: 20px;
  line-height: 1.78;
}
a:link {
  font-family: "Exo 2" sans-serif;
  color: white;
  text-transform: uppercase;
  text-transform: full-width;
  letter-spacing: 1px;
  text-decoration: none;
}
a:hover {
  text-decoration: none;
  border-bottom: 2px solid aquamarine;
}
a:visited {
  color: whitesmoke;
}
.image-link {
  text-decoration: none;
}
a.image-link {
  border: 0 none;
  text-decoration: none;
}

